# trends-checker

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cookie.txt  keywords.txt  pyproject.toml
.github/workflows/: ci.yml
src/trends_checker/: cli.py
